syntax = "proto3";

package pb;

option go_package = "internals/pb";

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryResponse {
  repeated Category category = 1;
}

message FindCategoryRequest {
  string id = 1;
}

message Blank {}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
  rpc GetCategories(Blank) returns (CategoryResponse) {}
  rpc GetCategory(FindCategoryRequest) returns (CategoryResponse) {}
}